update by bugleesir

--- a/_posts/2024-8-1-面试学习.md
+++ b/_posts/2024-8-1-面试学习.md
@@ -1248,3 +1248,492 @@ class CustomThreadFactory implements ThreadFactory {
     }
 }
 ```
+
+### 9.调用 start()方法时会执行 run()方法，那怎么不直接调用 run()方法？
+
+在 Java 中，`start()` 方法用于启动一个线程，而 `run()` 方法则用于执行线程的任务。当你调用 `start()` 方法时，它将启动一个新的线程，并使其运行 `run()` 方法。
+
+如果直接调用run()方法，那么run()方法就在当前线程中运行，没有新的线程被创建，也就没有实现多线程的效果。
+
+start() 方法的调用会告诉 JVM 准备好所有必要的新线程结构，分配其所需资源，并调用线程的 run() 方法在这个新线程中执行。
+
+### 10.线程有哪些常用的调度方法？
+
+线程的等待与通知:
+
+①、**wait()**：当一个线程 A 调用一个共享变量的 wait() 方法时，线程 A 会被阻塞挂起，直到发生下面几种情况才会返回 ：
+
+线程 B 调用了共享对象 notify()或者 notifyAll() 方法；
+其他线程调用了线程 A 的 interrupt() 方法，线程 A 抛出 InterruptedException 异常返回。
+
+②、**wait(long timeout)** ：这个方法相比 wait() 方法多了一个超时参数，它的不同之处在于，如果线程 A 调用共享对象的 wait(long timeout)方法后，没有在指定的 timeout 时间内被其它线程唤醒，那么这个方法还是会因为超时而返回。
+
+③、**wait(long timeout, int nanos)**，其内部调用的是 wait(long timout) 方法。
+
+唤醒线程主要有下面两个方法：
+
+①、**notify()**：一个线程 A 调用共享对象的 notify() 方法后，会唤醒一个在这个共享变量上调用 wait 系列方法后被挂起的线程。
+
+一个共享变量上可能会有多个线程在等待，具体唤醒哪个等待的线程是随机的。
+
+②、**notifyAll()**：不同于在共享变量上调用 notify() 方法会唤醒被阻塞到该共享变量上的一个线程，notifyAll 方法会唤醒所有在该共享变量上调用 wait 系列方法而被挂起的线程。
+
+Thread 类还提供了一个 join() 方法，意思是如果一个线程 A 执行了 thread.join()，当前线程 A 会等待 thread 线程终止之后才从 thread.join() 返回。
+
+线程休眠
+
+**sleep(long millis)**：Thread 类中的静态方法，当一个执行中的线程 A 调用了 Thread 的 sleep 方法后，线程 A 会暂时让出指定时间的执行权。
+
+但是线程 A 所拥有的监视器资源，比如锁，还是持有不让出的。指定的睡眠时间到了后该方法会正常返回，接着参与 CPU 的调度，获取到 CPU 资源后就可以继续运行。
+
+让出优先权
+
+**yield()**：Thread 类中的静态方法，当一个线程调用 yield 方法时，实际是在暗示线程调度器，当前线程请求让出自己的 CPU，但是线程调度器可能会“装看不见”忽略这个暗示。
+
+线程中断
+
+Java 中的线程中断是一种线程间的协作模式，通过设置线程的中断标志并不能直接终止该线程的执行。被中断的线程会根据中断状态自行处理。
+
+**void interrupt()** 方法：中断线程，例如，当线程 A 运行时，线程 B 可以调用线程 interrupt() 方法来设置线程的中断标志为 true 并立即返回。设置标志仅仅是设置标志, 线程 B 实际并没有被中断，会继续往下执行。
+
+**boolean isInterrupted()** 方法： 检测当前线程是否被中断。
+
+**boolean interrupted()** 方法： 检测当前线程是否被中断，与 isInterrupted 不同的是，该方法如果发现当前线程被中断，则会清除中断标志。
+
+为了响应中断，线程的执行代码应该这样编写：
+
+```java
+public void run() {
+    try {
+        while (!Thread.currentThread().isInterrupted()) {
+            // 执行任务
+        }
+    } catch (InterruptedException e) {
+        // 线程被中断时的清理代码
+    } finally {
+        // 线程结束前的清理代码
+    }
+}
+```
+
+stop 方法用来强制线程停止执行，目前已经处于废弃状态，因为 stop 方法会导致线程立即停止，可能会在不一致的状态下释放锁，破坏对象的一致性，导致难以发现的错误和资源泄漏。
+
+### 11.线程的生命周期和状态？
+
+**新建状态（New）**：
+
+当创建一个新的线程对象时，线程处于新建状态。此时，JVM已经为线程分配了内存，但尚未开始执行线程。
+
+**就绪状态（Runnable）**：
+
+当调用线程对象的 start() 方法后，线程进入就绪状态。这意味着线程已经准备好被执行，但是还没有被调度器选中占用CPU时间。处于就绪状态的线程被放入可运行池中等待CPU时间片。
+
+**运行状态（Running）**：
+
+当就绪状态的线程被调度器选中并分配了CPU时间片后，线程开始执行其 run() 方法内的代码。此时线程处于运行状态。
+
+**阻塞状态（Blocked）**：
+
+线程由于某些原因暂时停止运行，比如等待I/O操作完成、等待用户输入、等待锁的获取等。阻塞状态下的线程不会占用CPU时间片，只有当阻塞原因解除后，线程才能重新进入就绪状态。
+
+**等待状态（Waiting）**：
+
+线程调用了 Object.wait() 方法或者其他会导致线程等待的方法时，线程会进入等待状态。在此状态下，线程会释放持有的锁，并等待其他线程的通知（通过 notify() 或 notifyAll() 方法）才能继续执行。
+
+**定时等待状态（Timed Waiting）**：
+
+当线程调用了一些具有指定等待时间的方法，如 Thread.sleep()、Object.wait(long timeout) 或 Thread.join(long millis) 时，线程会进入定时等待状态。在指定的时间过后，线程会自动恢复到就绪状态。
+
+**死亡状态（Terminated）**：
+
+当线程执行完毕或因异常退出了 run() 方法后，线程结束其生命周期，进入死亡状态。此时线程不再执行任何操作，也不会被再次调度。
+
+### 12.什么是线程的上下文切换？
+
+线程的上下文切换是指操作系统在多线程环境中，为了实现线程间的切换而进行的一系列操作。具体来说，当操作系统需要从一个线程切换到另一个线程时，它需要保存当前线程的状态（即上下文信息），然后加载另一个线程的状态，使得后者可以在CPU上继续执行。这个过程称为上下文切换。
+
+**上下文切换的过程主要包括以下几个步骤：**
+
+**保存当前线程的上下文：**
+
+记录当前线程的CPU寄存器值（如程序计数器、状态寄存器等）。
+
+保存当前线程的程序状态（如堆栈指针、栈顶指针等）。
+
+更新当前线程的状态信息（如将其标记为就绪或等待状态）。
+
+**选择新的线程：**
+
+操作系统从就绪队列中选择一个线程作为下一个执行的线程。
+
+**恢复新线程的上下文：**
+
+加载新线程的CPU寄存器值。
+
+恢复新线程的程序状态。
+
+将新线程的状态更新为运行状态。
+
+**上下文切换的影响**  
+
+**开销**：上下文切换本身需要消耗时间和CPU资源，包括保存和恢复寄存器、更新任务控制块（TCB）等。频繁的上下文切换会导致额外的开销，从而影响系统的整体性能。
+
+**中断**：上下文切换通常伴随着中断的发生，这会进一步增加系统的开销。
+
+**并发度**：虽然上下文切换使得多个线程能够在单个CPU上并发执行，但如果切换过于频繁，反而会降低并发执行的效率。
+
+### 13.守护线程了解吗？
+
+守护线程（Daemon Thread）是在计算机程序中一种特殊的线程类型，主要用于执行后台任务，而不干扰程序的主要功能。守护线程的特点是它们的存在是为了服务其他线程或整个应用程序，而不是直接为用户提供服务。当所有的非守护线程（也称作用户线程）都结束执行后，Java虚拟机（JVM）会自动终止所有守护线程并退出程序，即使守护线程仍在运行中。
+
+**守护线程的特点：**  
+
+**生命周期**：
+
+守护线程的生命周期与应用程序的主线程（或非守护线程）紧密相关。*当所有的非守护线程都终止时，即使还有守护线程在运行，虚拟机也会认为程序已经不再需要继续执行，并会停止所有守护线程，然后退出程序。*
+
+**服务性质**：
+
+守护线程通常用于执行那些不需要用户交互、对结果不敏感，且在程序运行过程中持续进行的后台任务。例如，垃圾回收（GC）线程、日志记录线程、监控线程、定时任务线程等。
+
+**创建与设置**：
+
+在Java中，线程默认创建为非守护线程。若要将其设置为守护线程，需要在创建线程后，通过 Thread.setDaemon(true) 方法进行设置。注意，只能在启动线程之前设置线程为守护线程。
+
+**退出行为**：
+
+*当主线程或最后一个非守护线程结束时，即使守护线程还在运行（如循环未结束、阻塞在 I/O 操作等），JVM 也会强制终止守护线程，不会等待其自然结束。*因此，守护线程不应该持有任何需要在程序退出时释放的重要资源，也不应该执行任何必须在程序退出前完成的清理工作。
+
+**异常处理**：
+
+如果守护线程抛出了未捕获的异常，且没有设置默认的未捕获异常处理器，那么该异常会被忽略，并且会导致守护线程立即终止。这与非守护线程不同，非守护线程抛出未捕获异常通常会导致整个程序终止。
+
+### 14.线程间的通信方式？
+
+①、**使用共享对象**，多个线程可以访问和修改同一个对象，从而实现信息的传递，比如说 volatile 和 synchronized 关键字。
+
+关键字 volatile 用来修饰成员变量，告知程序任何对该变量的访问均需要从共享内存中获取，而对它的改变必须同步刷新回共享内存，保证所有线程对变量访问的可见性。
+
+关键字 synchronized 可以修饰方法，或者以同步代码块的形式来使用，确保多个线程在同一个时刻，只能有一个线程在执行某个方法或某个代码块。
+
+```java
+public class SharedObject {
+    private String message;
+    private boolean hasMessage = false;
+
+    public synchronized void writeMessage(String message) {
+        while (hasMessage) {
+            try {
+                wait();
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        }
+        this.message = message;
+        hasMessage = true;
+        notifyAll();
+    }
+
+    public synchronized String readMessage() {
+        while (!hasMessage) {
+            try {
+                wait();
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        }
+        hasMessage = false;
+        notifyAll();
+        return message;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        SharedObject sharedObject = new SharedObject();
+
+        Thread writer = new Thread(() -> {
+            sharedObject.writeMessage("Hello from Writer!");
+        });
+
+        Thread reader = new Thread(() -> {
+            String message = sharedObject.readMessage();
+            System.out.println("Reader received: " + message);
+        });
+
+        writer.start();
+        reader.start();
+    }
+}
+```
+
+②、**使用 wait() 和 notify()**，例如，生产者-消费者模式中，生产者生产数据，消费者消费数据，通过 wait() 和 notify() 方法可以实现生产和消费的协调。
+
+一个线程调用共享对象的 wait() 方法时，它会进入该对象的等待池，并释放已经持有的该对象的锁，进入等待状态，直到其他线程调用相同对象的 notify() 或 notifyAll() 方法。
+
+一个线程调用共享对象的 notify() 方法时，它会唤醒在该对象等待池中等待的一个线程，使其进入锁池，等待获取锁。
+
+Condition 也提供了类似的方法，await() 负责等待、signal() 和 signalAll() 负责通知。
+
+通常与锁（特别是 ReentrantLock）一起使用，为线程提供了一种等待某个条件成真的机制，并允许其他线程在该条件变化时通知等待线程。更灵活、更强大。
+
+```java
+class MessageBox {
+    private String message;
+    private boolean empty = true;
+
+    public synchronized void produce(String message) {
+        while (!empty) {
+            try {
+                wait();
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        }
+        empty = false;
+        this.message = message;
+        notifyAll();
+    }
+
+    public synchronized String consume() {
+        while (empty) {
+            try {
+                wait();
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        }
+        empty = true;
+        notifyAll();
+        return message;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        MessageBox box = new MessageBox();
+
+        Thread producer = new Thread(() -> {
+            box.produce("Message from producer");
+        });
+
+        Thread consumer = new Thread(() -> {
+            String message = box.consume();
+            System.out.println("Consumer received: " + message);
+        });
+
+        producer.start();
+        consumer.start();
+    }
+}
+```
+
+③、**使用 Exchanger**，Exchanger 是一个同步点，可以在两个线程之间交换数据。一个线程调用 exchange() 方法，将数据传递给另一个线程，同时接收另一个线程的数据。
+
+```java
+import java.util.concurrent.Exchanger;
+
+public class Main {
+    public static void main(String[] args) {
+        Exchanger<String> exchanger = new Exchanger<>();
+
+        Thread thread1 = new Thread(() -> {
+            try {
+                String message = "Message from thread1";
+                String response = exchanger.exchange(message);
+                System.out.println("Thread1 received: " + response);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        });
+
+        Thread thread2 = new Thread(() -> {
+            try {
+                String message = "Message from thread2";
+                String response = exchanger.exchange(message);
+                System.out.println("Thread2 received: " + response);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        });
+
+        thread1.start();
+        thread2.start();
+    }
+}
+```
+
+④、**使用 CompletableFuture**，CompletableFuture 是 Java 8 引入的一个类，支持异步编程，允许线程在完成计算后将结果传递给其他线程。
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        CompletableFuture<String> future = CompletableFuture.supplyAsync(() -> {
+            // 模拟长时间计算
+            return "Message from CompletableFuture";
+        });
+
+        future.thenAccept(message -> {
+            System.out.println("Received: " + message);
+        });
+    }
+}
+```
+
+### 15.sleep 和 wait 的区别？
+
+sleep() 和 wait() 是 Java 中用于暂停当前线程的两个重要方法，sleep 是让当前线程休眠，不涉及对象类，也不需要获取对象的锁，属于 Thread 类的方法；wait 是让获得对象锁的线程实现等待，前提要获得对象的锁，属于 Object 类的方法。
+
+①、**所属类不同**
+
+sleep() 方法专属于 Thread 类。
+wait() 方法专属于 Object 类。
+
+②、**锁行为不同**
+
+当线程执行 sleep 方法时，它不会释放任何锁。也就是说，如果一个线程在持有某个对象的锁时调用了 sleep，它在睡眠期间仍然会持有这个锁。
+
+```java
+class SleepDoesNotReleaseLock {
+
+    private static final Object lock = new Object();
+
+    public static void main(String[] args) throws InterruptedException {
+        Thread sleepingThread = new Thread(() -> {
+            synchronized (lock) {
+                System.out.println("Thread 1 会继续持有锁，并且进入睡眠状态");
+                try {
+                    Thread.sleep(5000);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                System.out.println("Thread 1 醒来了，并且释放了锁");
+            }
+        });
+
+        Thread waitingThread = new Thread(() -> {
+            synchronized (lock) {
+                System.out.println("Thread 2 进入同步代码块");
+            }
+        });
+
+        sleepingThread.start();
+        Thread.sleep(1000);
+        waitingThread.start();
+    }
+}
+```
+
+```console
+Thread 1 会继续持有锁，并且进入睡眠状态
+Thread 1 醒来了，并且释放了锁
+Thread 2 进入同步代码块
+```
+
+从输出中我们可以看到，waitingThread 必须等待 sleepingThread 完成睡眠后才能进入同步代码块。
+
+而当线程执行 wait 方法时，它会释放它持有的那个对象的锁，这使得其他线程可以有机会获取该对象的锁。
+
+```java
+class WaitReleasesLock {
+
+    private static final Object lock = new Object();
+
+    public static void main(String[] args) throws InterruptedException {
+        Thread waitingThread = new Thread(() -> {
+            synchronized (lock) {
+                try {
+                    System.out.println("Thread 1 持有锁，准备等待 5 秒");
+                    lock.wait(5000);
+                    System.out.println("Thread 1 醒来了，并且退出同步代码块");
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        });
+
+        Thread notifyingThread = new Thread(() -> {
+            synchronized (lock) {
+                System.out.println("Thread 2 尝试唤醒等待中的线程");
+                lock.notify();
+                System.out.println("Thread 2 执行完了 notify");
+            }
+        });
+
+        waitingThread.start();
+        Thread.sleep(1000);
+        notifyingThread.start();
+    }
+}
+```
+
+```console
+Thread 1 持有锁，准备等待 5 秒
+Thread 2 尝试唤醒等待中的线程
+Thread 2 执行完了 notify
+Thread 1 醒来了，并且退出同步代码块
+```
+
+这表明 waitingThread 在调用 wait 后确实释放了锁。
+
+③、**使用条件不同**
+
+sleep() 方法可以在任何地方被调用。
+
+wait() 方法必须在同步代码块或同步方法中被调用，这是因为调用 wait() 方法的前提是当前线程必须持有对象的锁。否则会抛出 IllegalMonitorStateException 异常。
+
+④、**唤醒方式不同**
+
+sleep() 方法在指定的时间过后，线程会自动唤醒继续执行。
+
+wait() 方法需要依靠 notify()、notifyAll() 方法或者 wait() 方法中指定的等待时间到期来唤醒线程。
+
+⑤、**抛出异常不同**
+
+sleep() 方法在等待期间，如果线程被中断，会抛出 InterruptedException。
+
+如果线程被中断或等待时间到期时，wait() 方法同样会在等待期间抛出 InterruptedException。
+
+sleep()的用法：
+
+```java
+class SleepExample {
+    public static void main(String[] args) {
+        Thread thread = new Thread(() -> {
+            System.out.println("线程准备休眠 2 秒");
+            try {
+                Thread.sleep(2000); // 线程将睡眠2秒
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            System.out.println("线程醒来了");
+        });
+
+        thread.start();
+    }
+}
+```
+
+wait()的用法：
+
+```java
+class WaitExample {
+    public static void main(String[] args) {
+        final Object lock = new Object();
+
+        Thread thread = new Thread(() -> {
+            synchronized (lock) {
+                try {
+                    System.out.println("线程准备等待 2 秒");
+                    lock.wait(2000); // 线程会等待2秒，或者直到其他线程调用 lock.notify()/notifyAll()
+                    System.out.println("线程结束等待");
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        });
+
+        thread.start();
+    }
+}
+```
