update by bugleesir

--- a/_posts/2024-8-1-面试学习.md
+++ b/_posts/2024-8-1-面试学习.md
@@ -3,8 +3,70 @@ layout: article
 title: 面试题目
 ---
 
+<!-- TOC -->
 
+- [Java集合框架](#java集合框架)
+  - [1.阻塞队列的阻塞是什么含义？](#1阻塞队列的阻塞是什么含义)
+  - [2.阻塞队列的实现方式？](#2阻塞队列的实现方式)
+  - [3.线程不安全的集合变成线程安全的方法？](#3线程不安全的集合变成线程安全的方法)
+  - [4.HashMap的底层数据结构?](#4hashmap的底层数据结构)
+  - [5.为什么 HashMap 是线程不安全的？](#5为什么-hashmap-是线程不安全的)
+  - [6.平衡二叉树](#6平衡二叉树)
+    - [AVL 树](#avl-树)
+    - [红黑树](#红黑树)
+  - [7.HashMap 的 put 流程](#7hashmap-的-put-流程)
+  - [8.只重写 equals 没重写 hashcode，map put 的时候会发生什么?](#8只重写-equals-没重写-hashcodemap-put-的时候会发生什么)
+  - [9.为什么要用高低做异或运算？为什么非得高低 16 位异或？](#9为什么要用高低做异或运算为什么非得高低-16-位异或)
+  - [10.为什么 HashMap 的容量是 2 的倍数呢？hashCode 对数组长度取模定位数组下标的优化策略？](#10为什么-hashmap-的容量是-2-的倍数呢hashcode-对数组长度取模定位数组下标的优化策略)
+  - [11.map 集合在使用时候一般都需要写容量值？为什么要写？扩容机制？](#11map-集合在使用时候一般都需要写容量值为什么要写扩容机制)
+  - [12.红黑树转回链表的阈值为什么默认是6而不是8？](#12红黑树转回链表的阈值为什么默认是6而不是8)
+  - [13.JDK8对HashMap的实现原理做了哪些优化？](#13jdk8对hashmap的实现原理做了哪些优化)
+  - [14.HashMap和TreeMap的区别？](#14hashmap和treemap的区别)
+- [Java并发编程](#java并发编程)
+  - [1.你对线程安全的理解是什么？](#1你对线程安全的理解是什么)
+  - [2.线程和进程的区别？](#2线程和进程的区别)
+  - [3.线程共享内存和进程共享内存的区别？](#3线程共享内存和进程共享内存的区别)
+    - [进程共享内存](#进程共享内存)
+    - [线程共享内存](#线程共享内存)
+  - [4.有多少种实现线程的方式？](#4有多少种实现线程的方式)
+  - [5.为什么在项目中使用线程池？](#5为什么在项目中使用线程池)
+  - [6.讲一讲你对线程池的理解，并讲一讲使用的场景](#6讲一讲你对线程池的理解并讲一讲使用的场景)
+    - [线程池的概念](#线程池的概念)
+    - [线程池的基本组成](#线程池的基本组成)
+    - [线程池的工作流程](#线程池的工作流程)
+    - [线程池的拒绝策略](#线程池的拒绝策略)
+    - [线程池的阻塞队列](#线程池的阻塞队列)
+    - [线程池的提交](#线程池的提交)
+    - [线程池的关闭](#线程池的关闭)
+    - [线程池的线程数配置](#线程池的线程数配置)
+    - [线程池的种类](#线程池的种类)
+    - [线程池异常处理](#线程池异常处理)
+    - [线程池的状态](#线程池的状态)
+    - [线程池对参数的动态修改](#线程池对参数的动态修改)
+  - [7. 线程池在使用时需要注意什么？](#7-线程池在使用时需要注意什么)
+  - [8.你能设计并实现一个线程池吗？](#8你能设计并实现一个线程池吗)
+  - [9.调用 start()方法时会执行 run()方法，那怎么不直接调用 run()方法？](#9调用-start方法时会执行-run方法那怎么不直接调用-run方法)
+  - [10.线程有哪些常用的调度方法？](#10线程有哪些常用的调度方法)
+  - [11.线程的生命周期和状态？](#11线程的生命周期和状态)
+  - [12.什么是线程的上下文切换？](#12什么是线程的上下文切换)
+  - [13.守护线程了解吗？](#13守护线程了解吗)
+  - [14.线程间的通信方式？](#14线程间的通信方式)
+  - [15.sleep 和 wait 的区别？](#15sleep-和-wait-的区别)
+  - [16.举例一个线程安全的使用场景？](#16举例一个线程安全的使用场景)
+  - [17.请说一下 ThreadLocal 的作用和使用场景？](#17请说一下-threadlocal-的作用和使用场景)
+    - [ThreadLocal是什么？](#threadlocal是什么)
+    - [ThreadLocal 的工作原理](#threadlocal-的工作原理)
+    - [ThreadLocal 的使用场景](#threadlocal-的使用场景)
+    - [ThreadLocal 的使用步骤](#threadlocal-的使用步骤)
+  - [18.除了 ThreadLocal，还有什么解决线程安全问题的方法？](#18除了-threadlocal还有什么解决线程安全问题的方法)
+  - [19.ThreadLocal 怎么实现的呢？](#19threadlocal-怎么实现的呢)
+  - [20.java中的引用类型？](#20java中的引用类型)
+    - [强引用（Strong Reference）](#强引用strong-reference)
+    - [软引用（Soft Reference）](#软引用soft-reference)
+    - [弱引用（Weak Reference）](#弱引用weak-reference)
+    - [虚引用（Phantom Reference）](#虚引用phantom-reference)
 
+<!-- /TOC -->
 
 ## Java集合框架
 
@@ -1737,3 +1799,325 @@ class WaitExample {
     }
 }
 ```
+
+### 16.举例一个线程安全的使用场景？
+
+线程安全是 Java 并发编程中一个非常重要的概念，它指的是多线程环境下，多个线程对共享资源的访问不会导致数据的不一致性。
+
+一个常见的使用场景是在实现单例模式时确保线程安全。
+
+单例模式确保一个类只有一个实例，并提供一个全局访问点。在多线程环境下，如果多个线程同时尝试创建实例，单例类必须确保只创建一个实例。
+
+饿汉式是一种比较直接的实现方式，它通过在类加载时就立即初始化单例对象来保证线程安全。
+
+```java
+public class EagerSingleton {
+    private static final EagerSingleton instance = new EagerSingleton();
+
+    private EagerSingleton() {}
+
+    public static EagerSingleton getInstance() {
+        return instance;
+    }
+}
+```
+
+这种方式简单高效，但由于实例在类加载时就已经创建，可能会浪费内存资源。
+
+懒汉式是一种更常用的实现方式，它通过延迟初始化单例对象，在第一次使用时才创建实例。
+
+```java
+public class LazySingleton {
+    private volatile static LazySingleton instance;
+
+    private LazySingleton() {}
+
+    public static LazySingleton getInstance() {
+        if (instance == null) {
+            synchronized (LazySingleton.class) {
+                if (instance == null) {
+                    instance = new LazySingleton();
+                }
+            }
+        }
+        return instance;
+    }
+}
+```
+
+双重检查锁定确保了线程安全，并且只在第一次创建实例时加锁，提高了效率。
+
+### 17.请说一下 ThreadLocal 的作用和使用场景？
+
+#### ThreadLocal是什么？
+
+ThreadLocal 是 Java 中提供的一种用于实现线程局部变量的工具类。它允许每个线程都拥有自己的独立副本，从而实现线程隔离，用于解决多线程中共享对象的线程安全问题。
+
+#### ThreadLocal 的工作原理  
+
+ThreadLocal 的核心思想是为每个线程提供一个独立的变量副本，这样每个线程都可以独立地修改自己的副本，而不会影响到其他线程的数据。ThreadLocal 类本身维护了一个映射表（ThreadLocalMap），其中键是 ThreadLocal 对象，值则是每个线程对应的变量副本。
+
+#### ThreadLocal 的使用场景  
+
+**线程上下文传递**  
+
+在跨线程调用的场景中，可以使用 ThreadLocal 来存储和传递线程上下文信息。例如，可以将请求 ID、用户身份信息等存储在线程局部变量中，以便在后续的请求处理过程中方便地访问这些信息。
+
+**数据库连接管理**  
+
+在使用数据库连接池的情况下，可以将数据库连接存储在 ThreadLocal 中，这样每个线程可以独立管理自己的数据库连接，避免了线程间的竞争和冲突。例如，MyBatis 中的 SqlSession 对象就使用 ThreadLocal 来存储当前线程的数据库会话信息。
+
+**事务管理**  
+
+在需要手动管理事务的场景下，可以使用 ThreadLocal 来存储事务上下文信息，每个线程可以独立控制自己的事务，保证事务的隔离性。Spring 中的 TransactionSynchronizationManager 就使用 ThreadLocal 来存储事务相关的上下文信息。
+
+**工具类或辅助类**  
+
+有时为了方便，可以将一些工具类或辅助类的实例存储在 ThreadLocal 中，这样在多线程环境中每个线程都有自己独立的实例，避免了线程间的干扰。
+
+**临时数据存储**  
+
+在线程内部，如果需要存储一些临时数据，并且这些数据只在当前线程中有效，可以使用 ThreadLocal 来存储这些数据，避免了复杂的参数传递。
+
+#### ThreadLocal 的使用步骤
+
+①、创建 ThreadLocal
+
+```java
+//创建一个ThreadLocal变量
+public static ThreadLocal<String> localVariable = new ThreadLocal<>();
+```
+
+②、设置 ThreadLocal 的值
+
+```java
+//设置ThreadLocal变量的值
+localVariable.set("java");
+```
+
+③、获取 ThreadLocal 的值
+
+```java
+//获取ThreadLocal变量的值
+String value = localVariable.get();
+```
+
+④、删除 ThreadLocal 的值
+
+```java
+//删除ThreadLocal变量的值
+localVariable.remove();
+```
+
+### 18.除了 ThreadLocal，还有什么解决线程安全问题的方法？
+
+①、Java 中的 synchronized 关键字可以用于方法和代码块，确保同一时间只有一个线程可以执行特定的代码段。
+
+```java
+public synchronized void method() {
+    // 线程安全的操作
+}
+```
+
+②、Java 并发包（java.util.concurrent.locks）中提供了 Lock 接口和一些实现类，如 ReentrantLock。相比于 synchronized，ReentrantLock 提供了公平锁和非公平锁。
+
+```java
+ReentrantLock lock = new ReentrantLock();
+
+public void method() {
+    lock.lock();
+    try {
+        // 线程安全的操作
+    } finally {
+        lock.unlock();
+    }
+}
+```
+
+③、Java 并发包还提供了一组原子变量类（如 AtomicInteger，AtomicLong 等），它们利用 CAS（比较并交换），实现了无锁的原子操作，适用于简单的计数器场景。
+
+```java
+AtomicInteger atomicInteger = new AtomicInteger(0);
+
+public void increment() {
+    atomicInteger.incrementAndGet();
+}
+```
+
+④、Java 并发包提供了一些线程安全的集合类，如 ConcurrentHashMap，CopyOnWriteArrayList 等。这些集合类内部实现了必要的同步策略，提供了更高效的并发访问。
+
+```java
+ConcurrentHashMap<String, String> map = new ConcurrentHashMap<>();
+```
+
+⑤、volatile 变量保证了变量的可见性，修改操作是立即同步到主存的，读操作从主存中读取。
+
+```java
+private volatile boolean flag = false;
+```
+
+### 19.ThreadLocal 怎么实现的呢？
+
+ThreadLocal 本身并不存储任何值，它只是作为一个映射，来映射线程的局部变量。当一个线程调用 ThreadLocal 的 set 或 get 方法时，实际上是访问线程自己的 ThreadLocal.ThreadLocalMap。
+
+ThreadLocalMap 是 ThreadLocal 的静态内部类，它内部维护了一个 Entry 数组，key 是 ThreadLocal 对象，value 是线程的局部变量本身。
+
+早期的 ThreadLocal 不是这样的，它的 ThreadLocalMap 中使用 Thread 作为 key，这也是最简单的实现方式。
+
+优化后的方案有两个好处，一个是 Map 中存储的键值对变少了；另一个是 ThreadLocalMap 的生命周期和线程一样长，线程销毁的时候，ThreadLocalMap 也会被销毁。
+
+Entry 继承了 WeakReference，它限定了 key 是一个[弱引用](#弱引用weak-reference)，弱引用的好处是当内存不足时，JVM 会回收 ThreadLocal 对象，并且将其对应的 Entry 的 value 设置为 null，这样在很大程度上可以避免内存泄漏。
+
+**ThreadLocal 的实现原理**就是，每个线程维护一个 Map，key 为 ThreadLocal 对象，value 为想要实现线程隔离的对象。
+
+1、当需要存线程隔离的对象时，通过 ThreadLocal 的 set 方法将对象存入 Map 中。
+
+2、当需要取线程隔离的对象时，通过 ThreadLocal 的 get 方法从 Map 中取出对象。
+
+3、Map 的大小由 ThreadLocal 对象的多少决定。
+
+### 20.java中的引用类型？
+
+在 Java 中，引用类型有四种：强引用（Strong Reference）、软引用（Soft Reference）、弱引用（Weak Reference）和虚引用（Phantom Reference）。每种引用类型都有其特定的用途和行为。下面详细介绍这四种引用类型及其应用场景。
+
+#### 强引用（Strong Reference）
+
+特点：
+
+最常用的引用类型。
+
+只要有强引用指向一个对象，垃圾回收器不会回收该对象。
+
+对象的生命周期最长。
+
+```java
+public class StrongReferenceExample {
+    public static void main(String[] args) {
+        Object obj = new Object(); // 强引用
+        obj = null; // 断开强引用
+        // 如果没有其他强引用指向这个对象，垃圾回收器可以回收它
+    }
+}
+```
+
+应用场景：
+
+适用于需要长期保持对象引用的场景，如全局变量、成员变量等。
+
+#### 软引用（Soft Reference）
+
+特点：
+
+软引用用于描述一些非必需但仍然有用的对象。
+
+当系统即将发生内存溢出（OutOfMemoryError）时，会尝试回收软引用指向的对象。
+
+软引用比弱引用更持久，只有在系统内存不足时才会被回收。
+
+```java
+import java.lang.ref.SoftReference;
+
+public class SoftReferenceExample {
+    public static void main(String[] args) {
+        Object obj = new Object();
+        SoftReference<Object> softRef = new SoftReference<>(obj);
+        obj = null; // 断开强引用
+        
+        // 如果没有其他强引用指向这个对象，垃圾回收器可以回收它
+        System.gc(); // 请求垃圾回收
+        
+        // 检查对象是否已被回收
+        if (softRef.get() == null) {
+            System.out.println("对象已被垃圾回收");
+        } else {
+            System.out.println("对象还未被垃圾回收");
+        }
+    }
+}
+```
+
+应用场景：
+
+适用于实现缓存，特别是当缓存对象较大时，可以使用软引用来自动释放内存，避免 OutOfMemoryError。
+
+例如，java.util.WeakHashMap 使用软引用作为键。
+
+#### 弱引用（Weak Reference）
+
+特点：
+
+弱引用用于描述那些非必需的对象。
+
+当垃圾回收器运行时，无论系统内存是否充足，都会回收弱引用指向的对象。
+
+弱引用比软引用更容易被回收。
+
+```java
+import java.lang.ref.WeakReference;
+
+public class WeakReferenceExample {
+    public static void main(String[] args) {
+        Object obj = new Object();
+        WeakReference<Object> weakRef = new WeakReference<>(obj);
+        obj = null; // 断开强引用
+        
+        // 如果没有其他强引用指向这个对象，垃圾回收器可以回收它
+        System.gc(); // 请求垃圾回收
+        
+        // 检查对象是否已被回收
+        if (weakRef.get() == null) {
+            System.out.println("对象已被垃圾回收");
+        } else {
+            System.out.println("对象还未被垃圾回收");
+        }
+    }
+}
+```
+
+应用场景：
+
+适用于实现缓存，特别是当缓存对象较小且不需要长期保存时。
+
+例如，java.lang.ref.WeakHashMap 使用弱引用作为键。
+
+#### 虚引用（Phantom Reference）
+
+特点：
+
+虚引用是最弱的一种引用关系。
+
+虚引用并不会决定对象的生命周期。
+
+虚引用主要用于跟踪对象的垃圾回收状态。
+
+虚引用必须与引用队列（ReferenceQueue）关联使用。
+
+```java
+import java.lang.ref.PhantomReference;
+import java.lang.ref.ReferenceQueue;
+
+public class PhantomReferenceExample {
+    public static void main(String[] args) {
+        Object obj = new Object();
+        ReferenceQueue<Object> queue = new ReferenceQueue<>();
+        PhantomReference<Object> phantomRef = new PhantomReference<>(obj, queue);
+        obj = null; // 断开强引用
+        
+        // 如果没有其他强引用指向这个对象，垃圾回收器可以回收它
+        System.gc(); // 请求垃圾回收
+        
+        // 检查对象是否已被回收
+        if (queue.poll() != null) {
+            System.out.println("对象已被垃圾回收");
+        } else {
+            System.out.println("对象还未被垃圾回收");
+        }
+    }
+}
+```
+
+应用场景：
+
+适用于跟踪对象的垃圾回收状态，通常用于实现对象的最终化处理。
+
+例如，可以用来实现对象的清理逻辑，确保对象被垃圾回收后执行某些清理操作。
