update by bugleesir

--- a/_posts/2024-8-1-面试学习.md
+++ b/_posts/2024-8-1-面试学习.md
@@ -65,6 +65,23 @@ title: 面试题目
     - [软引用（Soft Reference）](#软引用soft-reference)
     - [弱引用（Weak Reference）](#弱引用weak-reference)
     - [虚引用（Phantom Reference）](#虚引用phantom-reference)
+  - [21.ThreadLocal内存泄漏是怎么回事？](#21threadlocal内存泄漏是怎么回事)
+  - [22.ThreadLocal结合线程池使用导致的复用问题？](#22threadlocal结合线程池使用导致的复用问题)
+  - [23.ThreadLocal的删除过程？](#23threadlocal的删除过程)
+  - [24.ThreadLocalMap的源码分析？](#24threadlocalmap的源码分析)
+  - [25.ThreadLocalMap如何解决Hash冲突？](#25threadlocalmap如何解决hash冲突)
+  - [26.ThreadLocalMap的扩容？](#26threadlocalmap的扩容)
+  - [27.父子线程怎么共享数据？](#27父子线程怎么共享数据)
+  - [28.为什么线程要使用自己的内存？](#28为什么线程要使用自己的内存)
+  - [29.对原子性、可见性、有序性的理解？](#29对原子性可见性有序性的理解)
+  - [30.什么是指令重排？](#30什么是指令重排)
+    - [指令重排的原因](#指令重排的原因)
+    - [指令重排的类型](#指令重排的类型)
+    - [指令重排对多线程程序的影响](#指令重排对多线程程序的影响)
+    - [避免指令重排的方法](#避免指令重排的方法)
+    - [指令重排的限制](#指令重排的限制)
+  - [31.volatile关键字的实现原理？](#31volatile关键字的实现原理)
+  - [32.volatile加在基本类型和对象上的区别？](#32volatile加在基本类型和对象上的区别)
 
 <!-- /TOC -->
 
@@ -2121,3 +2138,344 @@ public class PhantomReferenceExample {
 适用于跟踪对象的垃圾回收状态，通常用于实现对象的最终化处理。
 
 例如，可以用来实现对象的清理逻辑，确保对象被垃圾回收后执行某些清理操作。
+
+### 21.ThreadLocal内存泄漏是怎么回事？
+
+通常情况下，随着线程 Thread 的结束，其内部的 ThreadLocalMap 也会被回收，从而避免了内存泄漏。
+
+但如果一个线程一直在运行，并且其 ThreadLocalMap 中的 Entry.value 一直指向某个强引用对象，那么这个对象就不会被回收，从而导致内存泄漏。当 Entry 非常多时，可能就会引发更严重的内存溢出问题。
+
+**如何解决内存泄漏问题？**  
+
+使用完 ThreadLocal 后，及时调用 remove() 方法释放内存空间。
+
+```java
+try {
+    threadLocal.set(value);
+    // 执行业务操作
+} finally {
+    threadLocal.remove(); // 确保能够执行清理
+}
+```
+
+`remove()` 方法会将当前线程的 ThreadLocalMap 中的所有 key 为 null 的 Entry 全部清除，这样就能避免内存泄漏问题。
+
+```java
+private void remove(ThreadLocal<?> key) {
+    Entry[] tab = table;
+    int len = tab.length;
+    int i = key.threadLocalHashCode & (len-1);
+    for (Entry e = tab[i];
+            e != null;
+            e = tab[i = nextIndex(i, len)]) {
+        if (e.get() == key) {
+            e.clear();
+            expungeStaleEntry(i);
+            return;
+        }
+    }
+}
+
+public void clear() {
+    this.referent = null;
+}
+```
+
+### 22.ThreadLocal结合线程池使用导致的复用问题？
+
+当 ThreadLocal 与线程池结合使用时，特别容易出现复用问题，主要原因如下：
+
+线程复用：线程池的一个主要特性就是它可以重用已经创建好的线程来执行新任务。这意味着同一个线程可能会被执行多个不同的任务。
+
+数据残留：如果前一个任务在使用 ThreadLocal 变量后没有清理，那么当线程被复用执行下一个任务时，可能会读取到前一个任务留下的 ThreadLocal 变量的值。这对于需要独立上下文的新任务来说是不正确的，可能导致数据混乱或错误的行为。
+
+避免复用问题：为了避免出现复用问题，可以在使用 ThreadLocal 后调用 ThreadLocal 的 remove() 方法来清除 ThreadLocal 变量的值。这样，当线程被复用时，ThreadLocal 变量中的值会被重置，确保每个任务都有自己的独立上下文。
+
+### 23.ThreadLocal的删除过程？
+
+当一个 ThreadLocal 对象不再被任何强引用持有时，它的生命周期就结束了。此时，ThreadLocalMap 中对应条目的键变成了 null。当 ThreadLocal 的 get() 或 set() 方法被调用时，ThreadLocalMap 会清理掉所有键为 null 的条目，这些条目即为那些已经没有强引用的 ThreadLocal 对象。
+
+此外，如果希望在 ThreadLocal 对象还存在时就清除某个线程上的绑定值，可以调用 ThreadLocal 的 remove() 方法。这会从当前线程的 ThreadLocalMap 中移除该 ThreadLocal 对象的条目。
+
+### 24.ThreadLocalMap的源码分析？
+
+**元素数组**  
+
+一个 table 数组，存储 Entry 类型的元素，Entry 是 ThreaLocal 弱引用作为 key，Object 作为 value 的结构。
+
+```java
+ private Entry[] table;
+```
+
+**散列方法**  
+
+散列方法就是怎么把对应的 key 映射到 table 数组的相应下标，ThreadLocalMap 用的是哈希取余法，取出 key 的 threadLocalHashCode，然后和 table 数组长度减一&运算（相当于取余）。
+
+```java
+int i = key.threadLocalHashCode & (table.length - 1);
+```
+
+这里的 threadLocalHashCode 计算有点东西，每创建一个 ThreadLocal 对象，它就会新增0x61c88647，这个值很特殊，它是斐波那契数 也叫 黄金分割数。hash增量为 这个数字，带来的好处就是 hash 分布非常均匀。
+
+```java
+    private static final int HASH_INCREMENT = 0x61c88647;
+
+    private static int nextHashCode() {
+        return nextHashCode.getAndAdd(HASH_INCREMENT);
+    }
+```
+
+### 25.ThreadLocalMap如何解决Hash冲突？
+
+使用**开放地址法**解决哈希冲突。若果某个位置被占用，则继续在当前位置的下一个位置查找，直到找到空位置为止。
+
+### 26.ThreadLocalMap的扩容？
+
+**扩容条件**：
+
+当向 ThreadLocalMap 添加一个新的 ThreadLocal 变量时，如果当前 ThreadLocalMap 的大小达到了某个阈值（通常是当前容量的三分之二），那么就会触发扩容操作。
+
+**扩容过程**：
+
+扩容操作首先会检查当前的 ThreadLocalMap 是否为空，以及是否大于当前容量的三分之二。如果满足条件，则会进行扩容。
+扩容的具体操作是创建一个新的数组，其大小通常是原数组大小的两倍。
+接着，旧数组中的所有元素会被重新散列，并放入新的数组中。
+在此过程中，如果发现某些 ThreadLocal 对象已经被垃圾回收（即它们的引用变为 null），那么这些条目会被清理掉。
+
+**重新散列**：
+
+重新散列的过程涉及到计算每个 ThreadLocal 对象的哈希值，并确定其在新数组中的位置。
+这个过程确保了即使在扩容后，ThreadLocal 对象也能正确地映射到 ThreadLocalMap 中的位置。
+
+**更新引用**：
+
+完成重新散列后，ThreadLocalMap 内部的指针会被更新以指向新的数组。
+
+**垃圾回收**：
+
+在扩容过程中，还会检查是否有已经被垃圾回收的 ThreadLocal 对象，并进行相应的清理工作。这是为了防止内存泄漏的发生。
+
+### 27.父子线程怎么共享数据？
+
+使用 InheritableThreadLocal
+
+InheritableThreadLocal 是 ThreadLocal 的一个子类，它允许子线程继承父线程中的 ThreadLocal 变量。当创建子线程时，如果父线程中有 InheritableThreadLocal 变量，那么这些变量会被复制到子线程中。
+
+```java
+// 创建一个可继承的线程局部变量
+InheritableThreadLocal<String> inheritableThreadLocal = new InheritableThreadLocal<>();
+inheritableThreadLocal.set("Parent Value");
+
+// 创建一个子线程
+Thread childThread = new Thread(() -> {
+    System.out.println("Child Thread Value: " + inheritableThreadLocal.get());
+});
+
+childThread.start();
+```
+
+在这个例子中，子线程启动时能够访问到父线程中设置的 InheritableThreadLocal 变量的值。
+
+### 28.为什么线程要使用自己的内存？
+
+第一，在多线程环境中，如果所有线程都直接操作主内存中的共享变量，会引发更多的内存访问竞争，这不仅影响性能，还增加了线程安全问题的复杂度。*通过让每个线程使用本地内存，可以减少对主内存的直接访问和竞争，从而提高程序的并发性能。*
+
+第二，现代 CPU 为了优化执行效率，可能会对指令进行乱序执行（指令重排序）。*使用本地内存（CPU 缓存和寄存器）可以在不影响最终执行结果的前提下，使得 CPU 有更大的自由度来乱序执行指令，从而提高执行效率。*
+
+### 29.对原子性、可见性、有序性的理解？
+
+**原子性**：原子性指的是一个操作是不可分割、不可中断的，要么全部执行并且执行的过程不会被任何因素打断，要么就全不执行。
+
+**可见性**：可见性指的是一个线程修改了共享变量的值，其他线程能够立即看到这个修改。
+
+**有序性**：有序性指的是对于一个线程的执行代码，从前往后依次执行，单线程下可以认为程序是有序的，但是并发时有可能会发生指令重排。
+
+如何确保原子性、可见性、有序性？
+
+**原子性**：JMM 只能保证基本的原子性，如果要保证一个代码块的原子性，需要使用synchronized 。
+
+**可见性**：Java 是利用volatile关键字来保证可见性的，除此之外，final和synchronized也能保证可见性。
+
+**有序性**：synchronized或者volatile都可以保证多线程之间操作的有序性。
+
+### 30.什么是指令重排？
+
+指令重排是指编译器或处理器为了优化性能而改变程序中指令执行顺序的行为。虽然重排后的指令在逻辑上仍然遵循程序的语义，但在实际执行时可能会导致一些意想不到的问题，特别是在多线程环境中。
+
+#### 指令重排的原因  
+
+指令重排主要有以下几种原因：
+
+**编译器优化**：
+
+提前计算：编译器可能会提前计算一些表达式的值，以减少运行时的计算开销。
+
+延迟加载：编译器可能会延迟加载一些变量的值，直到真正需要使用时才加载，以减少不必要的内存访问。
+
+**处理器优化**：
+
+乱序执行：现代处理器采用乱序执行技术，可以在不影响最终结果的情况下调整指令的执行顺序，以充分利用硬件资源。
+
+流水线执行：处理器的流水线技术可以将指令分解成多个阶段并行执行，从而提高执行效率。
+
+**内存访问优化**：
+
+预取：处理器可能会预先加载一些数据到缓存中，以减少未来的内存访问延迟。
+
+写后置：处理器可能会将写操作推迟到适当的时机，以减少内存访问次数。
+
+#### 指令重排的类型
+
+指令重排可以分为以下几种类型：
+
+**编译器优化的重排序**。编译器在不改变单线程程序语义的前提下，可以重新安排语句的执行顺序。
+
+**指令级并行的重排序**。现代处理器采用了指令级并行技术（Instruction-Level Parallelism，ILP）来将多条指令重叠执行。如果不存在数据依赖性，处理器可以改变语句对应 机器指令的执行顺序。
+
+**内存系统的重排序**。由于处理器使用缓存和读/写缓冲区，这使得加载和存储操作看上去可能是在乱序执行。
+
+#### 指令重排对多线程程序的影响
+
+指令重排在多线程环境中可能会导致以下问题：
+
+**数据不一致**：
+
+如果两个线程同时访问和修改同一个变量，指令重排可能会导致数据不一致的问题。
+
+例如，线程 A 先写入变量 x，然后写入变量 y；线程 B 可能会先读取到变量 y 的新值，然后再读取到变量 x 的旧值，导致数据不一致。
+
+**内存可见性问题**：
+
+指令重排可能会导致内存可见性问题，即一个线程修改的变量值在另一个线程中不可见。
+
+例如，线程 A 修改了变量 x，但由于指令重排，线程 B 可能会读取到变量 x 的旧值。
+
+**死锁和活锁**：
+
+指令重排可能会导致死锁和活锁问题，特别是在使用锁和其他同步机制时。
+
+例如，线程 A 和线程 B 同时尝试获取两个锁，但由于指令重排，可能会导致死锁。
+
+#### 避免指令重排的方法
+
+**使用 volatile 关键字**：
+
+volatile 变量的读写操作会插入内存屏障，禁止编译器和处理器对相关指令进行重排序。
+
+```java
+volatile int x = 0;
+
+public void writeX() {
+    x = 1;
+}
+
+public void readX() {
+    if (x == 1) {
+        // do something
+    }
+}
+```
+
+**使用 synchronized 关键字**：
+
+synchronized 修饰的方法或代码块会插入内存屏障，禁止编译器和处理器对相关指令进行重排序。
+
+```java
+public synchronized void increment() {
+    count++;
+}
+```
+
+**使用 final 关键字**：
+
+final 变量一旦初始化就不能再改变，确保了线程之间的可见性和有序性。
+
+```java
+final int x = 0;
+```
+
+#### 指令重排的限制
+
+两个规则happens-before和as-if-serial来约束。
+
+**happens-before规则**：
+
+如果一个操作 happens-before 另一个操作，那么第一个操作的执行结果将对第二个操作可见，而且第一个操作的执行顺序排在第二个操作之前。
+
+两个操作之间存在 happens-before 关系，并不意味着 Java 平台的具体实现必须要按照 happens-before 关系指定的顺序来执行。如果重排序之后的执行结果，与按 happens-before 关系来执行的结果一致，那么这种重排序并不非法
+
+**程序顺序规则**：一个线程中的每个操作，happens-before 于该线程中的任意后续操作。
+
+**监视器锁规则**：对一个锁的解锁，happens-before 于随后对这个锁的加锁。
+
+**volatile 变量规则**：对一个 volatile 域的写，happens-before 于任意后续对这个 volatile 域的读。
+
+**传递性**：如果 A happens-before B，且 B happens-before C，那么 A happens-before C。
+
+**start()规则**：如果线程 A 执行操作 ThreadB.start()（启动线程 B），那么 A 线程的 ThreadB.start()操作 happens-before 于线程 B 中的任意操作。
+
+**join()规则**：如果线程 A 执行操作 ThreadB.join()并成功返回，那么线程 B 中的任意操作 happens-before 于线程 A 从 ThreadB.join()操作成功返回。
+
+**as-if-serial规则**：
+
+不管怎么重排序（编译器和处理器为了提高并行度），单线程程序的执行结果不能被改变。编译器、runtime 和处理器都必须遵守 as-if-serial 语义。
+
+为了遵守 as-if-serial 语义，编译器和处理器不会对存在数据依赖关系的操作做重排序，因为这种重排序会改变执行结果。但是，如果操作之间不存在数据依赖关系，这些操作就可能被编译器和处理器重排序。为了具体说明，请看下面计算圆面积的代码示例。
+
+```java
+double pi = 3.14;   // A
+double r = 1.0;   // B
+double area = pi * r * r;   // C
+```
+
+A 和 C 之间存在数据依赖关系，同时 B 和 C 之间也存在数据依赖关系。因此在最终执行的指令序列中，C 不能被重排序到 A 和 B 的前面（C 排到 A 和 B 的前面，程序的结果将会被改变）。但 A 和 B 之间没有数据依赖关系，编译器和处理器可以重排序 A 和 B 之间的执行顺序。
+
+### 31.volatile关键字的实现原理？
+
+**可见性**  
+
+volatile 变量的主要作用之一是确保变量的可见性。具体来说：
+
+写操作：当一个线程修改了一个 volatile 变量的值时，这个新的值会被立即写回到主内存中。
+
+读操作：当一个线程读取一个 volatile 变量的值时，它会从主内存中读取最新的值，而不是从本地缓存中读取。
+
+**有序性**  
+
+volatile 变量还确保了操作的有序性。具体来说：
+
+内存屏障：volatile 变量的读写操作会插入内存屏障（memory fence），禁止相关的指令重排。
+
+写屏障：在 volatile 变量的写操作前后插入写屏障，确保写操作的有序性。
+
+读屏障：在 volatile 变量的读操作前后插入读屏障，确保读操作的有序性。
+
+**写操作**  
+
+当一个线程修改了一个 volatile 变量的值时：
+
+写操作前插入写屏障：确保之前的写操作已经完成。
+
+写入主内存：将新的值写入主内存。
+
+写操作后插入写屏障：确保后续的写操作不会重排到这个写操作之前。
+
+**读操作**  
+
+当一个线程读取一个 volatile 变量的值时：
+
+读操作前插入读屏障：确保之前的读操作已经完成。
+
+从主内存读取：从主内存中读取最新的值。
+
+读操作后插入读屏障：确保后续的读操作不会重排到这个读操作之前。
+
+### 32.volatile加在基本类型和对象上的区别？
+
+在 Java 中，volatile 关键字可以用于修饰基本类型和对象。
+
+当 volatile 用于基本数据类型时，能*确保该变量的读写操作是直接从主内存中读取或写入的。*
+
+当 volatile 用于引用类型时，它确保引用本身的可见性，即*确保引用指向的对象地址是最新的。*
+
+但是，volatile 并不能保证引用对象内部状态的线程安全性。
