update by bugleesir

--- a/_posts/2024-8-1-面试学习.md
+++ b/_posts/2024-8-1-面试学习.md
@@ -82,6 +82,16 @@ title: 面试题目
     - [指令重排的限制](#指令重排的限制)
   - [31.volatile关键字的实现原理？](#31volatile关键字的实现原理)
   - [32.volatile加在基本类型和对象上的区别？](#32volatile加在基本类型和对象上的区别)
+  - [32.synchronized 用过吗？怎么使用？](#32synchronized-用过吗怎么使用)
+  - [33.synchronized 的实现原理？](#33synchronized-的实现原理)
+    - [Monitor 监视器](#monitor-监视器)
+    - [可重入锁](#可重入锁)
+    - [锁的优化](#锁的优化)
+    - [锁的升级](#锁的升级)
+  - [34.synchronized和ReentrantLock区别和场景？](#34synchronized和reentrantlock区别和场景)
+  - [35.AQS 了解多少？](#35aqs-了解多少)
+  - [36.ReentrantLock 实现原理？](#36reentrantlock-实现原理)
+  - [37.ReentrantLock 怎么实现公平锁的？](#37reentrantlock-怎么实现公平锁的)
 
 <!-- /TOC -->
 
@@ -2479,3 +2489,261 @@ volatile 变量还确保了操作的有序性。具体来说：
 当 volatile 用于引用类型时，它确保引用本身的可见性，即*确保引用指向的对象地址是最新的。*
 
 但是，volatile 并不能保证引用对象内部状态的线程安全性。
+
+### 32.synchronized 用过吗？怎么使用？
+
+synchronized 是 Java 中用于实现线程同步的关键字，它可以确保共享资源被多个线程安全访问，防止数据不一致的情况发生。synchronized 主要有以下三种用法：
+
+**修饰实例方法**： 当一个方法被 synchronized 修饰时，该方法被称为同步方法。当一个线程访问某个对象的同步方法时，它首先必须获得该对象的锁，其他试图访问该对象其他同步方法的线程将会阻塞，直到第一个线程执行完毕并释放对象锁。
+
+```java
+public class MyClass {
+    public synchronized void myMethod() {
+        // 方法体
+    }
+}
+```
+
+**修饰静态方法**： 当 synchronized 修饰静态方法时，它锁定的是类的 Class 对象，而不是实例对象。这意味着对于所有实例来说，静态同步方法在同一时刻只能被一个线程访问。
+
+```java
+public class MyClass {
+    public static synchronized void myStaticMethod() {
+        // 方法体
+    }
+}
+```
+
+**修饰代码块**： synchronized 还可以用来修饰代码块，允许开发者指定一个对象作为锁对象，这样只有获得了该对象锁的线程才能执行这段代码块。
+
+```java
+public class MyClass {
+    private final Object myLock = new Object();
+    
+    public void myMethod() {
+        synchronized (myLock) {
+            // 同步代码块
+        }
+    }
+}
+```
+
+### 33.synchronized 的实现原理？
+
+synchronized 在 Java 中是一个关键字，用于实现线程间的同步。其底层实现原理依赖于 JVM（Java 虚拟机）提供的 Monitor（监视器）机制，并且在不同的 Java 版本中有所优化。以下是 synchronized 的实现原理概览：
+
+#### Monitor 监视器
+
+每个对象都有一个与之关联的监视器锁，也称为 Monitor。当一个线程进入一个 synchronized 代码块或方法时，它必须先获取对象的 Monitor。
+
+如果该 Monitor 已经被另一个线程持有，请求锁的线程将被阻塞，直到当前持有锁的线程释放锁。
+
+当线程退出 synchronized 块或方法时，它会释放该对象的 Monitor，使得其他线程有机会获取锁。
+
+#### 可重入锁
+
+synchronized 支持可重入性，这意味着同一个线程可以多次获取同一个对象的锁而不会导致死锁。*每次进入 synchronized 区域都会增加锁的计数，相应地，每次退出都会减少计数，直到计数归零才真正释放锁。*
+
+synchronized 之所以支持可重入，是因为 Java 的对象头包含了一个 Mark Word，用于存储对象的状态，包括锁信息。
+
+当一个线程获取对象锁时，JVM 会将该线程的 ID 写入 Mark Word，并将锁计数器设为 1。
+
+如果一个线程尝试再次获取已经持有的锁，JVM 会检查 Mark Word 中的线程 ID。如果 ID 匹配，表示的是同一个线程，锁计数器递增。
+
+当线程退出同步块时，锁计数器递减。如果计数器值为零，JVM 将锁标记为未持有状态，并清除线程 ID 信息。
+
+#### 锁的优化
+
+从 Java 1.6 开始，为了减少锁的开销，引入了多种锁的状态，包括偏向锁（Biased Locking）、轻量级锁（Lightweight Locking）和重量级锁（Heavyweight Locking）。
+
+**偏向锁**：当一个线程访问同步代码前，会先检查是否有线程已经获取了锁，如果没有，虚拟机会尝试将对象头的所有者设置为当前线程，同时将状态改为偏向模式。这样后续该线程再次访问时就不需要额外的同步操作。
+
+**轻量级锁**：当有第二个线程尝试获取锁时，会使用 CAS 操作来尝试获取锁。如果 CAS 失败，则会尝试自旋（Spinning），即循环尝试获取锁。
+
+**重量级锁**：如果自旋一定次数仍然没有获取到锁，则会放弃自旋，线程进入阻塞状态，等待锁的持有线程释放锁后再通过操作系统内核调度唤醒。
+
+#### 锁的升级
+
+①、**从无锁到偏向锁**：
+
+当一个线程首次访问同步块时，如果此对象无锁状态且偏向锁未被禁用，JVM 会将该对象头的锁标记改为偏向锁状态，并记录下当前线程的 ID。此时，对象头中的 Mark Word 中存储了持有偏向锁的线程 ID。
+
+如果另一个线程尝试获取这个已被偏向的锁，JVM 会检查当前持有偏向锁的线程是否活跃。如果持有偏向锁的线程不活跃，则可以将锁重偏向至新的线程；如果持有偏向锁的线程还活跃，则需要撤销偏向锁，升级为轻量级锁。
+
+②、**偏向锁的轻量级锁**：
+
+进行偏向锁撤销时，会遍历堆栈的所有锁记录，暂停拥有偏向锁的线程，并检查锁对象。如果这个过程中发现有其他线程试图获取这个锁，JVM 会撤销偏向锁，并将锁升级为轻量级锁。
+
+当有两个或以上线程竞争同一个偏向锁时，偏向锁模式不再有效，此时偏向锁会被撤销，对象的锁状态会升级为轻量级锁。
+
+③、**轻量级锁到重量级锁**：
+
+轻量级锁通过线程自旋来等待锁释放。如果自旋超过预定次数（自旋次数是可调的，并且自适应的），表明锁竞争激烈，轻量级锁的自旋已经不再高效。
+
+当自旋等待失败，或者有线程在等待队列中等待相同的轻量级锁时，轻量级锁会升级为重量级锁。在这种情况下，JVM 会在操作系统层面创建一个互斥锁（Mutex），所有进一步尝试获取该锁的线程将会被阻塞，直到锁被释放。
+
+**锁的获取与释放**：
+
+synchronized 的实现依赖于 JVM 的内部指令 monitorenter 和 monitorexit。当线程执行到 synchronized 代码块之前，会执行 monitorenter 指令获取锁；当执行完 synchronized 代码块之后，会执行 monitorexit 指令释放锁。
+
+### 34.synchronized和ReentrantLock区别和场景？
+
+synchronized 和 ReentrantLock 都是 Java 中用于实现线程同步的重要工具，但它们之间存在一些关键的区别，这些区别决定了它们在不同场景下的适用性。以下是两者的主要区别及适用场景：
+
+**使用方式**：
+
+synchronized 是 Java 关键字，直接在代码级别声明同步区域或方法。
+
+ReentrantLock 是一个类，实现了 Lock 接口，需要显式地调用 lock() 方法获取锁，以及 unlock() 方法释放锁。
+
+```java
+// synchronized 修饰方法
+public synchronized void method() {
+    // 业务代码
+}
+
+// synchronized 修饰代码块
+synchronized (this) {
+    // 业务代码
+}
+
+// ReentrantLock 加锁
+ReentrantLock lock = new ReentrantLock();
+lock.lock();
+try {
+    // 业务代码
+} finally {
+    lock.unlock();
+}
+```
+
+**锁的释放**：
+
+synchronized 在线程抛出异常时能够自动释放锁，因此不需要担心由于异常而导致的死锁。
+
+ReentrantLock 必须显式地调用 unlock() 方法释放锁，如果在 try 块中获取锁而在 finally 块中释放锁，则可以保证即使抛出异常也能释放锁，否则可能导致死锁。
+
+**响应中断**：
+
+synchronized 不支持响应中断，如果一个线程在等待锁时被中断，它仍然会等待锁。
+
+ReentrantLock 支持响应中断，可以通过 lockInterruptibly() 方法来允许等待锁的线程响应中断。
+
+**锁的公平性**：
+
+synchronized 总是非公平锁，即新来的线程可能会优先于已经在等待的线程获取锁。
+
+ReentrantLock 可以选择是公平锁还是非公平锁，通过构造函数传入 true 或 false 参数来决定。
+
+**扩展性**：
+
+synchronized 提供的功能较为简单，主要用于基本的同步需求。
+
+ReentrantLock 提供了更丰富的功能，如尝试锁（tryLock）、可中断锁（lockInterruptibly）、定时锁（tryLock(long time, TimeUnit unit)）等高级功能。
+
+**适用场景**:
+
+synchronized 更适合于简单的同步需求，尤其是在代码简洁性和安全性更为重要的情况下。它的使用更加简单，不需要额外的代码来管理锁的获取和释放。
+
+ReentrantLock 适用于需要更精细控制锁行为的场景，比如需要支持中断或者希望实现公平锁，以及需要在等待锁时进行超时处理等。它提供了更多的灵活性和控制力
+
+**性能考量**：
+
+在性能方面，早期 synchronized 的性能较差，但在 Java 6 之后，随着 JVM 对 synchronized 的优化（如引入偏向锁、轻量级锁等），在某些低竞争场景下，synchronized 的性能可能优于 ReentrantLock。然而，在高竞争场景下，ReentrantLock 可能表现出更好的性能，因为它的实现可以更好地利用现代多核处理器的优势。
+
+**并发量大的情况下，使用 synchronized 还是 ReentrantLock**？
+
+在并发量特别高的情况下，ReentrantLock 的性能可能会优于 synchronized，原因包括：
+
+ReentrantLock 提供了超时和公平锁等特性，可以更好地应对复杂的并发场景 。
+
+ReentrantLock 允许更细粒度的锁控制，可以有效减少锁竞争。
+
+ReentrantLock 支持条件变量 Condition，可以实现比 synchronized 更复杂的线程间通信机制。
+
+### 35.AQS 了解多少？
+
+AQS，全称是 AbstractQueuedSynchronizer，中文意思是抽象队列同步器，由 Doug Lea 设计，是 Java 并发包java.util.concurrent的核心框架类，许多同步类的实现都依赖于它，如 ReentrantLock、Semaphore、CountDownLatch 等。
+
+AQS 的思想是，如果被请求的共享资源空闲，则当前线程能够成功获取资源；否则，它将进入一个等待队列，当有其他线程释放资源时，系统会挑选等待队列中的一个线程，赋予其资源。
+
+整个过程通过维护一个 int 类型的状态和一个先进先出（FIFO）的队列，来实现对共享资源的管理。
+
+①、同步状态 state 由 volatile 修饰，保证了多线程之间的可见性；
+
+```java
+private volatile int state;
+```
+
+②、同步队列是通过内部定义的 Node 类来实现的，每个 Node 包含了等待状态、前后节点、线程的引用等。
+
+```java
+static final class Node {
+    static final int CANCELLED =  1;
+    static final int SIGNAL    = -1;
+    static final int CONDITION = -2;
+    static final int PROPAGATE = -3;
+
+    volatile Node prev;
+
+    volatile Node next;
+
+    volatile Thread thread;
+}
+```
+
+AQS 支持两种同步方式：
+
+独占模式：这种方式下，每次只能有一个线程持有锁，例如 ReentrantLock。
+
+共享模式：这种方式下，多个线程可以同时获取锁，例如 Semaphore 和 CountDownLatch。
+
+子类可以通过继承 AQS 并实现它的方法来管理同步状态，这些方法包括：
+
+tryAcquire：独占方式尝试获取资源，成功则返回 true，失败则返回 false；
+
+tryRelease：独占方式尝试释放资源；
+
+tryAcquireShared(int arg)：共享方式尝试获取资源；
+
+tryReleaseShared(int arg)：共享方式尝试释放资源；
+
+isHeldExclusively()：该线程是否正在独占资源。
+
+如果共享资源被占用，需要一种特定的阻塞等待唤醒机制来保证锁的分配，AQS 会将竞争共享资源失败的线程添加到一个 CLH 队列中。
+
+在 CLH 锁中，当一个线程尝试获取锁并失败时，它会将自己添加到队列的尾部并自旋，等待前一个节点的线程释放锁。
+
+### 36.ReentrantLock 实现原理？
+
+ReentrantLock 是可重入的独占锁，只能有一个线程可以获取该锁，其它获取该锁的线程会被阻塞。
+
+可重入表示当前线程获取该锁后再次获取不会被阻塞，也就意味着同一个线程可以多次获得同一个锁而不会发生死锁。
+
+new ReentrantLock() 默认创建的是非公平锁 NonfairSync。
+
+**公平锁 FairSync**  
+
+在公平锁模式下，锁会授予等待时间最长的线程。
+
+**非公平锁 NonfairSync**  
+
+在非公平锁模式下，锁可能会授予刚刚请求它的线程，而不考虑等待时间。
+
+ReentrantLock 内部通过一个计数器来跟踪锁的持有次数。
+
+当线程调用lock()方法获取锁时，ReentrantLock 会检查当前状态，判断锁是否已经被其他线程持有。如果没有被持有，则当前线程将获得锁；如果锁已被其他线程持有，则当前线程将根据锁的公平性策略，可能会被加入到等待队列中。
+
+线程首次获取锁时，计数器值变为 1；如果同一线程再次获取锁，计数器增加；每释放一次锁，计数器减 1。
+
+当线程调用unlock()方法时，ReentrantLock 会将持有锁的计数减 1，如果计数到达 0，则释放锁，并唤醒等待队列中的线程来竞争锁。
+
+### 37.ReentrantLock 怎么实现公平锁的？
+
+在 ReentrantLock 中，公平锁的实现主要通过 FairSync 类来完成，它是 ReentrantLock.Sync 的子类，继承自 AbstractQueuedSynchronizer（AQS）。公平锁的核心在于确保线程获取锁的顺序符合它们在队列中的位置。
+
+公平锁意味着在多个线程竞争锁时，获取锁的顺序与线程请求锁的顺序相同，即先来先服务（FIFO）。
+
+虽然能保证锁的顺序，但实现起来比较复杂，因为需要额外维护一个有序队列。
+
+非公平锁不保证线程获取锁的顺序，当锁被释放时，任何请求锁的线程都有机会获取锁，而不是按照请求的顺序。
